After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 707638 - memory leaks found by valgrind
memory leaks found by valgrind
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
git master
Other Linux
: Normal normal
: 1.2.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-09-06 15:32 UTC by Jonas Holmberg
Modified: 2014-02-25 22:29 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
unref perms (2.23 KB, patch)
2013-09-06 15:33 UTC, Jonas Holmberg
committed Details | Review
free threadpool (1.05 KB, patch)
2013-09-06 15:34 UTC, Jonas Holmberg
committed Details | Review
unref threadpool (1.05 KB, patch)
2013-09-06 15:36 UTC, Jonas Holmberg
committed Details | Review
unref factories (2.16 KB, patch)
2013-09-06 15:37 UTC, Jonas Holmberg
committed Details | Review
free threadpool (3.02 KB, patch)
2013-09-06 19:20 UTC, Jonas Holmberg
committed Details | Review

Description Jonas Holmberg 2013-09-06 15:32:40 UTC
Valgrind found several memory leaks when I ran the unittests in valgrind.
Comment 1 Jonas Holmberg 2013-09-06 15:33:48 UTC
Created attachment 254257 [details] [review]
unref perms
Comment 2 Jonas Holmberg 2013-09-06 15:34:38 UTC
Created attachment 254258 [details] [review]
free threadpool
Comment 3 Jonas Holmberg 2013-09-06 15:36:57 UTC
Created attachment 254259 [details] [review]
unref threadpool
Comment 4 Jonas Holmberg 2013-09-06 15:37:31 UTC
Created attachment 254260 [details] [review]
unref factories
Comment 5 Tim-Philipp Müller 2013-09-06 18:04:16 UTC
The second and third patch seem to be identical. I have pushed those three now, thanks:


commit cafdba8445bc95311e47cac7839edbbf7527a60d
Author: Jonas Holmberg <jonashg@axis.com>
Date:   Fri Sep 6 17:23:20 2013 +0200

    mountpoints tests: unref matched factories
    
    https://bugzilla.gnome.org/show_bug.cgi?id=707638

commit c15c659b40d12fb5f6521934690cdf816a3c8e8d
Author: Jonas Holmberg <jonashg@axis.com>
Date:   Thu Sep 5 18:01:18 2013 +0200

    media tests: unref thread pool and caps
    
    https://bugzilla.gnome.org/show_bug.cgi?id=707638

commit 19178a413c7b7cc46899e34fb72746af4b7d9560
Author: Jonas Holmberg <jonashg@axis.com>
Date:   Thu Sep 5 08:53:55 2013 +0200

    auth, media, media-factory: unref permissions
    
    https://bugzilla.gnome.org/show_bug.cgi?id=707638
Comment 6 Tim-Philipp Müller 2013-09-06 18:11:31 UTC
(I made two minor changes in the finalize functions to not call set_perms(NULL) but unref directly.)
Comment 7 Jonas Holmberg 2013-09-06 19:20:47 UTC
Created attachment 254300 [details] [review]
free threadpool
Comment 8 Jonas Holmberg 2013-09-06 19:24:29 UTC
(In reply to comment #5)
> The second and third patch seem to be identical.

I made a mistake. The missing patch has been uploaded now ("free threadpool").
Comment 9 Tim-Philipp Müller 2013-09-06 19:44:48 UTC
Comment on attachment 254300 [details] [review]
free threadpool

Thanks!