auth, media, media-factory: unref permissions

https://bugzilla.gnome.org/show_bug.cgi?id=707638